unpackaged/main/default/objects/FSL__Criteria__c/FSL__Criteria__c.object-meta.xml
<CustomObject>
    <label>Criteria</label>
    <nameField>
        <displayFormat>Criteria-{000000}</displayFormat>
        <label>Criteria Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Criterias</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>