unpackaged/main/default/objects/FSL__Criteria__c/fields/FSL__Object_Type__c.field-meta.xml
<CustomField>
    <fullName>FSL__Object_Type__c</fullName>
    <label>Object Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ServiceAppointment</fullName>
                <label>Service Appointment</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>