unpackaged/main/default/objects/FSL__Criteria__c/fields/FSL__User_Type__c.field-meta.xml
<CustomField>
    <fullName>FSL__User_Type__c</fullName>
    <label>User Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Resource</fullName>
            </value>
            <value>
                <fullName>Dispatcher</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>Community</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
                <isActive>false</isActive>
                <label>Mobile</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>