unpackaged/main/default/objects/FSL__Criteria__c/fields/FSL__Work_Types__c.field-meta.xml
<CustomField>
    <fullName>FSL__Work_Types__c</fullName>
    <label>Work Types</label>
    <length>65536</length>
    <type>LongTextArea</type>
</CustomField>